syntax = "proto3";

package frequency;

option go_package = "APG1-Bootcamp/Go_Team00-2/src/task-01-anomaly-detection";

service FrequencyService {
    rpc StreamFrequencies(Empty) returns (stream FrequencyMessage);
}

message Empty {}

message FrequencyMessage {
    string session_id = 1;
    double frequency = 2;
    int64 timestamp = 3;
}
